fixed broken layout in firefox and googlebot

--- a/page/common.css
+++ b/page/common.css
@@ -154,6 +154,9 @@ button,
 	.header {
 		flex-direction: column;
 	}
+	.header > * {
+		flex-basis: auto;
+	}
 	.header-nav {
 		padding-left: 0;
 		margin-top: 4%;
